--- a/scripts.html
+++ b/scripts.html
@@ -1,2 +1,3 @@
-<script src="http://code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
+<script src="http://code.jquery.com/jquery-1.11.0.min.js"></script>
+<script src="plugins/jquery.columnizer.js"></script>
 <script src="script.js"></script>
